# gps-coords-from-image

./: README.md  imagesimilarity.py  metadata.py  pyproject.toml
